# HelpMeWithOpenCl

./: .gitignore  CMakeLists.txt  main.cpp
resrc/: sha384.cl  sha384.h  sha512.cl  sha512.h  types.h
src/: breaking.cpp  breaking.h  profiling.cpp  profiling.h  utils.cpp  utils.h
src/hash/: sha512.cpp  sha512.h
